# jobsite-backend

./: .gitignore  docker-compose.yml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  (+1 more)
ai-interview/: pyproject.toml
ai-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/routes/: assessment.py  criteria.py  resume.py  screening.py
ai-service/app/api/schemas/: answer_scoring.py  assessment.py  criteria.py  feedback.py  resume.py  screening.py
ai-service/app/core/: auth.py  config.py  errors.py  middleware.py
ai-service/app/core/events/: inbound.py  outbound.py
ai-service/app/core/models/: __init__.py  ai_api_log.py  base.py  parsed_resume_cache.py
ai-service/app/core/services/: __init__.py  ai_logging_service.py  assessment_service.py  criteria_service.py  resume_service.py  screening_service.py
ai-service/app/infrastructure/ai_providers/: __init__.py  base.py  openai_provider.py
ai-service/app/infrastructure/db/: engine.py  session.py
ai-service/app/infrastructure/messaging/: connection.py  consumer.py  handlers.py  publisher.py
ai-service/migrations/: env.py
ai-service/tests/: conftest.py  test_api.py  test_auth.py  test_caching.py  test_errors.py  test_event_contracts.py  test_schemas.py  test_services.py
docs/: CATALOG_DB_DESIGN.md  DEVELOPMENT_PLAN.md  HR_WORKFLOWS_DB_DESIGN.md  README.md  RECRUITMENT_DB_DESIGN.md  TECHNICAL_OVERVIEW.md  TODO.md
jobsite-api/: .dockerignore  .editorconfig  Directory.Build.props  Dockerfile  Jobsite.Api.slnx
(+726 files in other folders)
